Added custom variables file

--- a/src/main.tpl.less
+++ b/src/main.tpl.less
@@ -1,4 +1,6 @@
-@import "../../vendor/bootstrap/less/bootstrap.less";
+@import "bootstrap.less";
+@import "variables.less";
+@import "mixins.less";
 <% _.forEach(grunt.file.expand('src/app/**/*.less'), function(name) { %>
 @import "<%= name.replace(/src/g, '../..') %>";
 <% }); %>
