--- a/src/app/app.less
+++ b/src/app/app.less
@@ -576,3 +576,31 @@ label.overflow {
 .searchFilter {
   cursor: pointer
 }
+
+.glyphicon {
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  font-family: 'Glyphicons Halflings';
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 12px;
+}
+
+.form-control {
+  padding: 3px 12px;
+  border: 1px solid #AAAAAA;
+  -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1070px;
+    height: 40px;
+  }
+}
