--- a/src/app/shared/header/header.less
+++ b/src/app/shared/header/header.less
@@ -4,6 +4,12 @@
 }
 
 @media (min-width: 768px) {
+  .navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
+    margin-left: -15px
+  }
+}
+
+@media (min-width: 768px) {
   .search {
     left: 36%;
     position: absolute;
@@ -95,4 +101,8 @@
     top: 35px
   }
 
+}
+
+.input-group-addon {
+  padding: 5px;
 }
