--- a/src/app/shared/header/header.less
+++ b/src/app/shared/header/header.less
@@ -1,6 +1,7 @@
-.navbar-default {
-  background-color: #000;
-  border-color: #000;
+
+.logo {
+  position: absolute;
+  z-index: 1
 }
 
 @media (min-width: 768px) {
