--- a/src/app/coaches/new/coaches.new.coachCert.tpl.html
+++ b/src/app/coaches/new/coaches.new.coachCert.tpl.html
@@ -1,7 +1,8 @@
 <div class="panel-heading certification" data-toggle='collapse'
      data-target='#certificateAccolades'
      data-parent='#accordion'>
-    <h4 class="panel-title"><a href="#certificateAccolades" class="jump"><i class="glyphicon glyphicon-chevron-up"></i> Certifications &amp; Accolades</a> </h4>
+    <h4 class="panel-title"><a href="#certificateAccolades" class="jump"><i class="glyphicon glyphicon-chevron-up"></i>
+        Certifications &amp; Accolades</a></h4>
 </div>
 <div class="panel-collapse collapse" id="certificateAccolades">
     <div class="panel-body">
@@ -27,22 +28,26 @@
                         <div class="col-sm-6">
                             <div class="input-group">
                                 <input type="text" class="form-control" placeholder="Attach Certificate Image">
-                                <span class="input-group-addon">Browse</span> </div>
+                                <span class="input-group-addon">Browse</span></div>
                         </div>
                     </div>
-                    <p><input type="checkbox" id="expiry"> <label for="expiry">This certification has no expiry.</label></p>
+                    <p><input type="checkbox" id="expiry"> <label for="expiry">This certification has no expiry.</label>
+                    </p>
+
                     <div class="row form-group border-bottom">
                         <div class="col-sm-3">Validity from:</div>
                         <div class="col-sm-3">
                             <div class="input-group">
-                                <input type="text" class="form-control" >
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span> </div>
+                                <input type="text" class="form-control">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                            </div>
                         </div>
                         <div class="col-sm-1">to</div>
                         <div class="col-sm-3 form-group">
                             <div class="input-group">
-                                <input type="text" class="form-control" >
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span> </div>
+                                <input type="text" class="form-control">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
@@ -52,6 +57,7 @@
                     </div>
                 </form>
             </div>
-        </div><!-- Tab panes -->
+        </div>
+        <!-- Tab panes -->
     </div>
 </div>
