--- a/src/app/coaches/new/coaches.new.tpl.html
+++ b/src/app/coaches/new/coaches.new.tpl.html
@@ -6,16 +6,23 @@
             <p class="pagging">Hello Shantanu, Manage your Account details, prefrences & your listings on this page</p>
         </div>
 
-    </div><!--Banner Carousel-->
+    </div>
+    <!--Banner Carousel-->
     <div class="container">
 
         <div class="row">
             <div class="col-sm-3 col-lg-3 ">
                 <div class="welcome-block">Welcome to Zingy!</div>
-                <p>You have indicated your interest in listing your services as a “coach” with us. Please fill in the form below to create your listing. Once you click on the ‘Add my listing’ button, your listing information will be sent for
+                <p>You have indicated your interest in listing your services as a “coach” with us. Please fill in the
+                    form below to create your listing. Once you click on the ‘Add my listing’ button, your listing
+                    information will be sent for
                     verification. </p>
-                <p>After approval, your listing will appear under “coaches” category on Zingy for free. You will also appear on any relevant searches on Zingy.</p>
-                <p>Alternatively, you could also download the “coach listing form”, fill it up offline at your leisure and send it across to coach@zingy.in</p>
+
+                <p>After approval, your listing will appear under “coaches” category on Zingy for free. You will also
+                    appear on any relevant searches on Zingy.</p>
+
+                <p>Alternatively, you could also download the “coach listing form”, fill it up offline at your leisure
+                    and send it across to coach@zingy.in</p>
                 <!-- <div class="welcome-block">Quick Settings</div>
                      <div class="settings form-group">
                          <p><a href="#" class="coach coaches jump">COACH <i class="glyphicon glyphicon-chevron-down"></i></a></p>
@@ -44,7 +51,9 @@
                     <div class="col-sm-12">
                         <p>ANY OTHER COMMENTS</p>
                         <textarea class="form-group form-control"></textarea>
-                        <p><input type="checkbox" id="terms"/> <label for="terms">I agree to the terms & conditions and also have read the <a href="#"><i>privacy policy</i></a> </label></p>
+
+                        <p><input type="checkbox" id="terms"/> <label for="terms">I agree to the terms & conditions and
+                            also have read the <a href="#"><i>privacy policy</i></a> </label></p>
                     </div>
                 </div>
                 <div class="row form-group">
@@ -58,5 +67,6 @@
             </div>
         </div>
 
-    </div><!--container-->
+    </div>
+    <!--container-->
 </section>
