--- a/src/app/results/results.category.tpl.html
+++ b/src/app/results/results.category.tpl.html
@@ -1,12 +1,17 @@
 <div class="refine-search form-group">
     <div class="serach-btm">
-        <div class="inter-padding"><input type="checkbox" id="all"> <label for="all" class="width90Percent">All <span class="glyphicon glyphicon-chevron-down pull-right"></span></label></div>
+        <div class="inter-padding"><input type="checkbox" id="all"> <label for="all" class="width90Percent">All <span
+                class="glyphicon glyphicon-chevron-down pull-right"></span></label></div>
     </div>
     <div class="serach-btm">
-        <div class="inter-padding bg-color"><input type="checkbox" id="COACHES"> <label for="COACHES" class="width90Percent">COACHES (121) <span class="coaches glyphicon glyphicon-chevron-down pull-right"></span></label></div>
+        <div class="inter-padding bg-color"><input type="checkbox" id="COACHES"> <label for="COACHES"
+                                                                                        class="width90Percent">COACHES
+            (121) <span class="coaches glyphicon glyphicon-chevron-down pull-right"></span></label></div>
         <div class="search-details collapse">
             <div class="inter-padding">
-                <input type="checkbox" id="men"> <label for="men">Men</label>&nbsp;&nbsp; <input type="checkbox" id="women"> <label for="women">Women</label>
+                <input type="checkbox" id="men"> <label for="men">Men</label>&nbsp;&nbsp; <input type="checkbox"
+                                                                                                 id="women"> <label
+                    for="women">Women</label>
             </div>
             <div class="row inter-padding">
                 <div class="col-sm-6 ">
@@ -20,12 +25,13 @@
                 </div>
             </div>
             <label class="overflow inter-padding">Coaching requried for:</label>
+
             <div class="row inter-padding">
                 <div class="col-sm-4">
                     <input type="checkbox" id="age"> <label for="age">Age</label>
                 </div>
                 <div class="col-sm-8">
-                    <input type="range" />
+                    <input type="range"/>
                 </div>
             </div>
             <div class="row inter-padding">
@@ -42,15 +48,20 @@
     </div>
 
     <div class="serach-btm">
-        <div class="inter-padding"><input type="checkbox" id="PLAYERS"> <label for="PLAYERS" class="width90Percent">PLAYERS (354) <span class="glyphicon glyphicon-chevron-down pull-right"></span></label></div>
+        <div class="inter-padding"><input type="checkbox" id="PLAYERS"> <label for="PLAYERS" class="width90Percent">PLAYERS
+            (354) <span class="glyphicon glyphicon-chevron-down pull-right"></span></label></div>
     </div>
     <div class="serach-btm">
-        <div class="inter-padding"><input type="checkbox" id="FACILITIES"> <label for="FACILITIES" class="width90Percent">FACILITIES (79) <span class="glyphicon glyphicon-chevron-down pull-right"></span></label></div>
+        <div class="inter-padding"><input type="checkbox" id="FACILITIES"> <label for="FACILITIES"
+                                                                                  class="width90Percent">FACILITIES (79)
+            <span class="glyphicon glyphicon-chevron-down pull-right"></span></label></div>
     </div>
     <div class="serach-btm">
-        <div class="inter-padding"><input type="checkbox" id="SUPPLIERS"> <label for="SUPPLIERS" class="width90Percent">SUPPLIERS/SHOPS (26) <span class="glyphicon glyphicon-chevron-down pull-right"></span></label></div>
+        <div class="inter-padding"><input type="checkbox" id="SUPPLIERS"> <label for="SUPPLIERS" class="width90Percent">SUPPLIERS/SHOPS
+            (26) <span class="glyphicon glyphicon-chevron-down pull-right"></span></label></div>
     </div>
     <div>
-        <div class="inter-padding"><input type="checkbox" id="EVENTS"> <label for="EVENTS" class="width90Percent">EVENTS (27) <span class="glyphicon glyphicon-chevron-down pull-right"></span></label></div>
+        <div class="inter-padding"><input type="checkbox" id="EVENTS"> <label for="EVENTS" class="width90Percent">EVENTS
+            (27) <span class="glyphicon glyphicon-chevron-down pull-right"></span></label></div>
     </div>
 </div>
