--- a/src/app/results/results.location.tpl.html
+++ b/src/app/results/results.location.tpl.html
@@ -1,7 +1,7 @@
 <div class="settings form-group">
     <div class="row form-group">
         <div class="col-sm-12">
-            <input type="radio" class="pull-left" />
+            <input type="radio" class="pull-left"/>
             <select class="form-control pull-left area-dd">
                 <option>All areas(Pune)</option>
                 <option>All areas(Mumbai)</option>
@@ -9,9 +9,11 @@
         </div>
     </div>
     <p align="center" class="form-group"><img src="assets/images/or.gif"/></p>
+
     <div class="row form-group">
         <div class="col-sm-12">
-            <input type="radio"class="pull-left" /> <span class="pull-left radius-txt"> Within radius of</span> <input type="text" class="form-control pull-left radius-textbox" /> <span class="pull-left">km from</span>
+            <input type="radio" class="pull-left"/> <span class="pull-left radius-txt"> Within radius of</span> <input
+                type="text" class="form-control pull-left radius-textbox"/> <span class="pull-left">km from</span>
         </div>
     </div>
     <div class="row">
