--- a/src/assets/less/variables.less
+++ b/src/assets/less/variables.less
@@ -1,10 +1,9 @@
 //== Colors
-@brand-primary: #f36d00;
+
 
 //button
 @btn-primary-color: #fff;
-
-@btn-primary-bg: @brand-primary;
+@btn-primary-bg: #f36d00;
 @btn-primary-border: darken(@btn-primary-bg, 5%);
 
 //navbar
@@ -12,6 +11,8 @@
 
 @navbar-default-color: #000;
 @navbar-default-bg: #000;
+
+@navbar-default-link-hover-color: #D9D9D9;
 
 //** Background color for `<body>`.
 @body-bg: #dcdcdc;
