--- a/src/app/coaches/details/coaches.details.tpl.html
+++ b/src/app/coaches/details/coaches.details.tpl.html
@@ -4,19 +4,26 @@
         <div class="col-sm-3 col-lg-3 form-group">&nbsp;</div>
         <div class="col-sm-7 col-lg-7">
             <div class="form-group">
-                <p class="pull-right pagging"><a href="#"><i class="glyphicon glyphicon-chevron-left"></i> Back to Results</a>&nbsp;&nbsp;<a href="#"><i class="glyphicon glyphicon-chevron-left"></i> Previous</a>&nbsp;&nbsp;<a href="#">Next <i class="glyphicon glyphicon-chevron-right"></i> </a></p>
+                <p class="pull-right pagging"><a href="#"><i class="glyphicon glyphicon-chevron-left"></i> Back to
+                    Results</a>&nbsp;&nbsp;<a href="#"><i class="glyphicon glyphicon-chevron-left"></i> Previous</a>&nbsp;&nbsp;<a
+                        href="#">Next <i class="glyphicon glyphicon-chevron-right"></i> </a></p>
             </div>
         </div>
 
-    </div><!--Banner Carousel-->
+    </div>
+    <!--Banner Carousel-->
     <div class="container">
         <!--Search Option for Mobile-->
         <div class="search-mob">
             <div class='input-group search-group pull-left'>
-                <span class='input-group-addon searchFilter'><i class='glyphicon glyphicon-align-justify'></i> <i class='glyphicon glyphicon-chevron-down'></i></span>
-                <input type='text' class='form-control typeahead' id='search' placeholder="Search for Coach / Facilities / Players / Facilities">
+                <span class='input-group-addon searchFilter'><i class='glyphicon glyphicon-align-justify'></i> <i
+                        class='glyphicon glyphicon-chevron-down'></i></span>
+                <input type='text' class='form-control typeahead' id='search'
+                       placeholder="Search for Coach / Facilities / Players / Facilities">
             </div>
-            <div><button class="btn btn-primary pull-left">GO</button></div>
+            <div>
+                <button class="btn btn-primary pull-left">GO</button>
+            </div>
             <div class="search-filters collapse">
                 <ul>
                     <li><a href="#" class="all search-img"><span>All</span></a></li>
@@ -27,37 +34,49 @@
                     <li><a href="#" class="events search-img"><span>Events</span></a></li>
                 </ul>
             </div>
-        </div><!--Search Option for Mobile-->
+        </div>
+        <!--Search Option for Mobile-->
         <div class="row">
             <div class="col-sm-3 col-lg-3 ">
                 <div class="welcome-block">MILIND N JOSHI</div>
                 <div class="coach-img"><img src="assets/images/coach.jpg" class="img-responsive "/></div>
                 <div class="settings form-group">
                     <p>
-                        <span class="pull-left"><span class="star-green"></span><span class="star-green"></span><span class="star-green"></span><span class="star-grey-green"></span><span class="star-grey"></span></span>
-                        <span class="pull-right"><img src="assets/images/review.png" /> Reviews <a href="#">(223)</a></span>
+                        <span class="pull-left"><span class="star-green"></span><span class="star-green"></span><span
+                                class="star-green"></span><span class="star-grey-green"></span><span
+                                class="star-grey"></span></span>
+                        <span class="pull-right"><img src="assets/images/review.png"/> Reviews <a
+                                href="#">(223)</a></span>
                     </p>
-                    <div class="clear-both"><img src="assets/images/likes.gif" class="pull-left" /> <span class="pull-left likes">87 Likes</span> <span class="pull-right"><div class="share-div">
+
+                    <div class="clear-both"><img src="assets/images/likes.gif" class="pull-left"/> <span
+                            class="pull-left likes">87 Likes</span> <span class="pull-right"><div class="share-div">
                         <ul>
                             <li><a href="#"><img src="assets/images/share.png"/></a>
                                 <ul class="collapse">
                                     <li>
                                         <div class="share-box" style="right:5px;top:30px">
-                                            <p class="share-right"><img src="assets/images/share.png" class="img-responsive" /></p>
+                                            <p class="share-right"><img src="assets/images/share.png"
+                                                                        class="img-responsive"/></p>
+
                                             <div class="social-network clear-both">
-                                                <div class="pull-left"><img src="assets/images/facebook.png" class="pull-left"/></div>
+                                                <div class="pull-left"><img src="assets/images/facebook.png"
+                                                                            class="pull-left"/></div>
                                                 <div class="like-box"><span class="count">4.0 K</span></div>
                                             </div>
                                             <div class="social-network">
-                                                <div class="pull-left"><img src="assets/images/twitter.png" class="pull-left"/></div>
+                                                <div class="pull-left"><img src="assets/images/twitter.png"
+                                                                            class="pull-left"/></div>
                                                 <div class="like-box"><span class="count">507</span></div>
                                             </div>
                                             <div class="social-network">
-                                                <div class="pull-left"><img src="assets/images/google+.png" class="pull-left"/></div>
+                                                <div class="pull-left"><img src="assets/images/google+.png"
+                                                                            class="pull-left"/></div>
                                                 <div class="like-box"><span class="count">4.5 K</span></div>
                                             </div>
                                             <div class="social-network">
-                                                <div class="pull-left"><img src="assets/images/rss.png" class="pull-left"/></div>
+                                                <div class="pull-left"><img src="assets/images/rss.png"
+                                                                            class="pull-left"/></div>
                                                 <div class="like-box"><span class="count">78.8 K</span></div>
                                             </div>
                                         </div>
@@ -67,19 +86,30 @@
                         </ul>
                     </div></span></div>
                     <p class="clear-both"><a href="#">milindjoshi@gmail.com</a></p>
+
                     <p><a href="#">milind.joshi@goldgym.com</a></p>
+
                     <p>Mobile +91 8657272428</p>
+
                     <p>Office +91 20 47586978</p>
-                    <p>Registered address:<br/>Post 91, Lane 7, Off North Main Road<br/>Koregaon Park<br/>Pune: 411 053<br/><a href="#"><i class="glyphicon glyphicon-map-marker"></i></a> Map</p>
+
+                    <p>Registered address:<br/>Post 91, Lane 7, Off North Main Road<br/>Koregaon Park<br/>Pune: 411
+                        053<br/><a href="#"><i class="glyphicon glyphicon-map-marker"></i></a> Map</p>
 
                 </div>
                 <div class="settings form-group">
                     <p>CERTIFICATIONS</p>
+
                     <p><img src="assets/images/certificate.jpg"/></p>
+
                     <p class="city">National Coaching Certification Program</p>
+
                     <p>Valid till: Feb 2018</p>
+
                     <p><img src="assets/images/certificate-1.jpg"/></p>
+
                     <p class="city">NFHS Learning</p>
+
                     <p>Valid till: Feb 2018</p>
                 </div>
             </div>
@@ -87,12 +117,24 @@
                 <div class="row">
                     <div class="col-sm-5 col-lg-5">
                         <h1>About Milind</h1>
-                        <p>Sea give. You're after yielding in. Given doesn't for him. Form kind day bearing seed. Wherein. Air don't all tree years bearing moveth have multiply itself so to you're moveth fruitful beast years saying. Seas give waters that firmament living you're moving replenish behold after darkness our replenish bearing all every. Beast upon isn't over earth there make lights image after.</p>
-                        <p>Life was kind was saying fruitful yielding divide. Us all sixth Our image image their. Moved may lights every green that fifth can't divide moved divide appear. </p>
+
+                        <p>Sea give. You're after yielding in. Given doesn't for him. Form kind day bearing seed.
+                            Wherein. Air don't all tree years bearing moveth have multiply itself so to you're moveth
+                            fruitful beast years saying. Seas give waters that firmament living you're moving replenish
+                            behold after darkness our replenish bearing all every. Beast upon isn't over earth there
+                            make lights image after.</p>
+
+                        <p>Life was kind was saying fruitful yielding divide. Us all sixth Our image image their. Moved
+                            may lights every green that fifth can't divide moved divide appear. </p>
+
                         <p><br/><a href="#">http://www.facebook.com/milindjoshi</a></p>
+
                         <p><a href="#">http://www.youtube.com/milindjoshi</a></p>
+
                         <p><a href="#">www.milindjoshicoaching.com</a></p>
+
                         <h3>Other Features</h3>
+
                         <div class="other-features">
                             <ul>
                                 <li>Week end Coaching</li>
@@ -106,10 +148,13 @@
 
                     <div class="col-sm-7 col-lg-7">
                         <h1>Coaching Experience</h1>
+
                         <div class="coaching-exp form-group">
                             <p>
                                 <span class="exp-txt pull-left form-group">Batminton (5yrs)</span>
-                                <span class="pull-right"><span class="star-green"></span><span class="star-green"></span><span class="star-green"></span><span class="star-grey-green"></span><span class="star-grey"></span></span>
+                                <span class="pull-right"><span class="star-green"></span><span
+                                        class="star-green"></span><span class="star-green"></span><span
+                                        class="star-grey-green"></span><span class="star-grey"></span></span>
                             </p>
                             <table class="table-responsive clear-both exp-table form-group" width="100%">
                                 <thead>
@@ -137,7 +182,9 @@
                             </table>
                             <p>
                                 <span class="exp-txt pull-left form-group">Tennis (8yrs)</span>
-                                <span class="pull-right"><span class="star-green"></span><span class="star-green"></span><span class="star-green"></span><span class="star-grey-green"></span><span class="star-grey"></span></span>
+                                <span class="pull-right"><span class="star-green"></span><span
+                                        class="star-green"></span><span class="star-green"></span><span
+                                        class="star-grey-green"></span><span class="star-grey"></span></span>
                             </p>
                             <table class="table-responsive clear-both exp-table" width="100%">
                                 <thead>
@@ -166,6 +213,7 @@
 
                         </div>
                         <h1>Affiliation with sports facilities</h1>
+
                         <div class="coaching-exp form-group">
                             <div class="row form-group">
                                 <div class="col-sm-6 form-group ">
@@ -173,7 +221,10 @@
                                 </div>
                                 <div class="col-sm-6">
                                     <h4>The Body workshop</h4>
-                                    <p>Post 91, Lane 7, Off North Main<br/>Road, Koregaon Park<br/>Pune: 411 053</br>Map</p>
+
+                                    <p>Post 91, Lane 7, Off North Main<br/>Road, Koregaon Park<br/>Pune: 411 053</br>Map
+                                    </p>
+
                                     <p>Ph: +91 20 3349 4423</p>
                                 </div>
                             </div>
@@ -183,7 +234,10 @@
                                 </div>
                                 <div class="col-sm-6">
                                     <h4>Gold Gym Kalyani Nagar</h4>
-                                    <p>Post 91, Lane 7, Off North Main<br/>Road, Koregaon Park<br/>Pune: 411 053</br>Map</p>
+
+                                    <p>Post 91, Lane 7, Off North Main<br/>Road, Koregaon Park<br/>Pune: 411 053</br>Map
+                                    </p>
+
                                     <p>Ph: +91 20 3349 4423</p>
                                 </div>
                             </div>
@@ -197,5 +251,6 @@
             </div>
         </div>
 
-    </div><!--container-->
+    </div>
+    <!--container-->
 </section>
