--- a/src/app/coaches/new/coaches.new.coachDtl.tpl.html
+++ b/src/app/coaches/new/coaches.new.coachDtl.tpl.html
@@ -1,7 +1,8 @@
 <div class="panel-heading coaching" data-toggle='collapse'
      data-target='#aboutCoaching'
      data-parent='#accordion'>
-    <h4 class="panel-title"><a href="#aboutCoaching" class="jump"><i class="glyphicon glyphicon-chevron-up"></i> About your Coaching</a> </h4>
+    <h4 class="panel-title"><a href="#aboutCoaching" class="jump"><i class="glyphicon glyphicon-chevron-up"></i> About
+        your Coaching</a></h4>
 </div>
 <div class="panel-collapse collapse" id="aboutCoaching">
     <div class="panel-body">
@@ -14,10 +15,10 @@
             <div class='tab-pane active' id='sport1'>
                 <div class="row form-group">
                     <div class="col-sm-5 form-group">
-                        <input type="text" class="form-control" placeholder="Which Sport do you coach for?" />
+                        <input type="text" class="form-control" placeholder="Which Sport do you coach for?"/>
                     </div>
                     <div class="col-sm-2 form-group">
-                        <select class="form-control" >
+                        <select class="form-control">
                             <option>01</option>
                             <option>02</option>
                             <option>03</option>
@@ -28,6 +29,7 @@
                     </div>
                 </div>
                 <p>WHOME DO YOU COACH:</p>
+
                 <div class="row form-group">
                     <div class="col-sm-2">
                         <input type="checkbox" id="men"/> <label for="men">Men</label>
@@ -45,7 +47,11 @@
                             <option>2</option>
                             <option>3</option>
                         </select>
-                        <span class="pull-left right-space left-spacing">Charges per class:</span> <input type="text" class="form-control pull-left right-space charge-textbox"/>  <span class="pull-left right-space">to:</span>  <input type="text" class="form-control pull-left right-space charge-textbox" /><span class="pull-left">Re</span>
+                        <span class="pull-left right-space left-spacing">Charges per class:</span> <input type="text"
+                                                                                                          class="form-control pull-left right-space charge-textbox"/>
+                        <span class="pull-left right-space">to:</span> <input type="text"
+                                                                              class="form-control pull-left right-space charge-textbox"/><span
+                            class="pull-left">Re</span>
                     </div>
 
                 </div>
@@ -66,7 +72,11 @@
                             <option>2</option>
                             <option>3</option>
                         </select>
-                        <span class="pull-left right-space left-spacing">Charges per class:</span> <input type="text" class="form-control pull-left right-space charge-textbox"/>  <span class="pull-left right-space">to:</span>  <input type="text" class="form-control pull-left right-space charge-textbox" /><span class="pull-left">Re</span>
+                        <span class="pull-left right-space left-spacing">Charges per class:</span> <input type="text"
+                                                                                                          class="form-control pull-left right-space charge-textbox"/>
+                        <span class="pull-left right-space">to:</span> <input type="text"
+                                                                              class="form-control pull-left right-space charge-textbox"/><span
+                            class="pull-left">Re</span>
                     </div>
 
                 </div>
@@ -87,13 +97,18 @@
                             <option>2</option>
                             <option>3</option>
                         </select>
-                        <span class="pull-left right-space left-spacing">Charges per class:</span> <input type="text" class="form-control pull-left right-space charge-textbox"/>  <span class="pull-left right-space">to:</span>  <input type="text" class="form-control pull-left right-space charge-textbox" /><span class="pull-left">Re</span>
+                        <span class="pull-left right-space left-spacing">Charges per class:</span> <input type="text"
+                                                                                                          class="form-control pull-left right-space charge-textbox"/>
+                        <span class="pull-left right-space">to:</span> <input type="text"
+                                                                              class="form-control pull-left right-space charge-textbox"/><span
+                            class="pull-left">Re</span>
                     </div>
 
                 </div>
             </div>
-        </div> <!-- Tab panes -->
-        <p>WHERE DO YOU COACH:  </p>
+        </div>
+        <!-- Tab panes -->
+        <p>WHERE DO YOU COACH: </p>
         <ul class='nav nav-tabs client-hub responsive-tabs form-group'>
             <li class='active'><a href='#VENUE1' data-toggle='tab'>VENUE1</a></li>
             <li><a href='#VENUE2' data-toggle='tab' class="inactive">VENUE2</a></li>
@@ -102,7 +117,9 @@
         <!-- Tab panes -->
         <div class='tab-content'>
             <div class='tab-pane active' id='VENUE1'>
-                <p><input type="checkbox" id="Check"/> <label for="Check">(Check here if address is same as Personal & Contact details above.)</label></p>
+                <p><input type="checkbox" id="Check"/> <label for="Check">(Check here if address is same as Personal &
+                    Contact details above.)</label></p>
+
                 <form role="form">
                     <div class="row form-group">
                         <div class="col-sm-6">
@@ -137,17 +154,21 @@
                         <div class="col-sm-6">
                             <div class="input-group">
                                 <input type="text" class="form-control" placeholder="Upload Gallery Pic">
-                                <span class="input-group-addon">Browse</span> </div>
+                                <span class="input-group-addon">Browse</span></div>
                         </div>
                     </div>
                     <p>YOUR PREFRENCES</p>
+
                     <div class="row form-group">
                         <div class="col-sm-5">Do you provide private coaching?</div>
-                        <div class="col-sm-4"><input type="radio" id="yes" name="coaching"/> <label for="yes">Yes</label> <input type="radio" id="no" name="coaching"/> <label for="no">No</label></div>
+                        <div class="col-sm-4"><input type="radio" id="yes" name="coaching"/> <label
+                                for="yes">Yes</label> <input type="radio" id="no" name="coaching"/> <label
+                                for="no">No</label></div>
                     </div>
                     <div class="row form-group border-bottom ">
                         <div class="col-sm-5">Do you provide fre trial classes?</div>
-                        <div class="col-sm-4"><input type="radio" id="yes1" name="trial"/> <label for="yes1">Yes</label> <input type="radio" id="no1" name="trial"/> <label for="no1">No</label></div>
+                        <div class="col-sm-4"><input type="radio" id="yes1" name="trial"/> <label for="yes1">Yes</label>
+                            <input type="radio" id="no1" name="trial"/> <label for="no1">No</label></div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12 form-group">
@@ -159,6 +180,7 @@
             <div class='tab-pane collapse' id='VENUE2'>
                 VENUE2
             </div>
-        </div><!-- Tab panes -->
+        </div>
+        <!-- Tab panes -->
     </div>
 </div>
