--- a/src/app/results/results.tpl.html
+++ b/src/app/results/results.tpl.html
@@ -7,7 +7,8 @@
         <!--Search Option for Mobile-->
         <div class="row">
             <div class="col-sm-3 col-lg-3 ">
-                <div class="welcome-block">Refine Search <span class="glyphicon glyphicon-repeat pull-right"></span></div>
+                <div class="welcome-block">Refine Search <span class="glyphicon glyphicon-repeat pull-right"></span>
+                </div>
                 <ng-include src="'app/results/results.category.tpl.html'"></ng-include>
                 <ng-include src="'app/results/results.location.tpl.html'"></ng-include>
 
@@ -19,5 +20,6 @@
                 <img src="assets/images/snowlink.jpg" class="img-responsive"/>
             </div>
         </div>
-    </div><!--container-->
+    </div>
+    <!--container-->
 </section>
