--- a/src/app/shared/header/header.less
+++ b/src/app/shared/header/header.less
@@ -1,3 +1,71 @@
+#zingy-header {
+  .navbar-collapse {
+    width: 169px;
+    height: 40px;
+  }
+}
+
+.navbar-default .navbar-toggle {
+  border-color: @navbar-default-color;
+}
+
+.navbar-toggle {
+  position: relative;
+  float: left;
+  padding: 9px 5px;
+  margin-top: 8px;
+  margin-right: -11px;
+  margin-bottom: 8px;
+  background-color: transparent;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.navbar-default .navbar-nav > li > a {
+  color: #D9D9D9;
+  font-size: 13px;
+  font-weight: bold;
+}
+
+.nav > li > a {
+  position: relative;
+  display: block;
+  padding: 5px 10px;
+}
+
+.location {
+  color: #ff7301;
+}
+
+@media (min-width: 1200px) {
+
+  .container {
+    width: 1070px;
+  }
+
+}
+
+@media (min-width: 768px) {
+  .navbar-nav > li > a {
+    padding-top: 0;
+    padding-bottom: 0;
+    text-align: right;
+  }
+
+  .navbar-nav > li {
+    float: right;
+  }
+
+  #zingy-header {
+    .navbar-collapse {
+      float: right;
+    }
+  }
+
+}
+
+//logo styles
 
 .logo {
   position: absolute;
@@ -5,90 +73,17 @@
 }
 
 @media (min-width: 768px) {
-  .navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
-    margin-left: -15px
-  }
-}
 
-@media (min-width: 768px) {
-  .search {
-    left: 36%;
-    position: absolute;
-    top: 23%;
-    width: 41%;
-    z-index: 1;
-    display: block
-  }
-
-  .best-offers {
-    border-right: 2px dotted #b0b0b0;
-  }
-
-  .dash {
-    border-left: 2px dotted #b0b0b0;
-  }
-
-  .search-mob, .mobile-logo {
+  .mobile-logo {
     display: none
   }
 
-  .border-right-dotted {
-    border-right: 1px dotted #878787;
-  }
 }
 
-@media (max-width: 765px) {
+@media (max-width: 768px) {
 
-  .search, .social, .snowlink, .f-like, .desktop-logo {
-    display: none
-  }
-
-  .best-offers {
-    border-right: 0px
-  }
-
-  .dash {
-    border-left: 0px
-  }
-
-  .search-mob {
-    left: 0;
-    position: relative;
-    top: 0;
-    width: 95%;
-    z-index: 1;
-    display: block;
-    float: left;
-    margin-bottom: 10px;
-  }
-
-  .clear-mob {
-    clear: both
-  }
-
-  .quick-setting {
-    border: 1px solid #4a413a;
-    background-color: #f9f9f9;
-    box-shadow: 2px 2px 4px #999;
-    position: relative;
-    right: 0px;
-    top: 0px;
-    width: auto;
-    z-index: 1;
-    overflow: hidden;
-  }
-
-  .location-setting {
-    border: 1px solid #4a413a;
-    background-color: #f9f9f9;
-    box-shadow: 2px 2px 4px #999;
-    position: relative;
-    right: 0px;
-    top: -55px;
-    width: auto;
-    z-index: 1;
-    padding: 10px;
-    overflow: hidden
+  .desktop-logo {
+    display: none;
   }
 
   .mobile-logo {
@@ -97,13 +92,13 @@
     top: 19px;
   }
 
-  .search-filters {
-    position: absolute !important;
-    top: 35px
-  }
-
 }
 
-.input-group-addon {
-  padding: 5px;
+// login / sign-up bell
+
+.bell {
+  position: absolute;
+  right: 12%;
+  top: 38px;
+  z-index: 1
 }
