--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -5,5 +5,5 @@
         <ng-include src="'app/home/offers/home.offers.tpl.html'"></ng-include>
         <ng-include src="'app/home/events/home.events.tpl.html'"></ng-include>
     </div>
-
+    <ng-include src="'app/home/featured/home.featured.tpl.html'"></ng-include>
 </div>
