--- a/src/app/shared/header/header.less
+++ b/src/app/shared/header/header.less
@@ -94,6 +94,15 @@
 
 }
 
+@media (min-width: 1200px) {
+  #zingy-header {
+    .container {
+      width: 1070px;
+      height: 40px;
+    }
+  }
+}
+
 // login / sign-up bell
 
 .bell {
