--- a/src/app/home/offers/home.offers.tpl.html
+++ b/src/app/home/offers/home.offers.tpl.html
@@ -1,71 +1,26 @@
-<div class="col-sm-6 col-lg-6 best-offers form-group">
-    <div><h1 class="pull-left">Best Offers on the block...!</h1> <a href="#" class="pull-right form-group">View all
-        offers</a></div>
-    <div id="liquid1" class="liquid clear-both" style="height: 199px; overflow: hidden;">
-        <span class="previous"></span>
-
-        <div class="wrapper" style="height: 199px; overflow: hidden; float: left; width: 448px;">
-            <ul style="height: 199px; float: left; margin: 0px; padding: 0px; display: block;">
-                <li style="height: 199px; display: block; float: left; margin-right: 16px; margin-left: 6px;">
-                    <div class="box">
-                        <img src="assets/images/offer-img1.jpg" class="img-responsive">
-
-                        <div class="box-content">
-                            <h4>Champion Sports</h4>
-
-                            <p>40% off on Adidas Shoes<br> 25% off on biking gear</p>
-
-                            <p class="pull-right"><a href="#"><img src="assets/images/share.png" class="img-responsive"></a>
-                            </p>
-                        </div>
-                    </div>
-                </li>
-                <li style="height: 199px; display: block; float: left; margin-right: 16px; margin-left: 6px;">
-                    <div class="box">
-                        <img src="assets/images/offer-img2.jpg" class="img-responsive">
-
-                        <div class="box-content">
-                            <h4>Shakti Sports</h4>
-
-                            <p>500 off on Purchase of 2000 &amp; above<br> Free T-shirt of your favorite team</p>
-
-                            <p class="pull-right"><a href="#"><img src="assets/images/share.png" class="img-responsive"></a>
-                            </p>
-                        </div>
-
-                    </div>
-                </li>
-                <li style="height: 199px; display: block; float: left; margin-right: 16px; margin-left: 6px;">
-                    <div class="box">
-                        <img src="assets/images/offer-img1.jpg" class="img-responsive">
-
-                        <div class="box-content">
-                            <h4>Champion Sports Pune</h4>
-
-                            <p>40% off on Adidas Shoes<br> 25% off on biking gear</p>
-
-                            <p class="pull-right"><a href="#"><img src="assets/images/share.png" class="img-responsive"></a>
-                            </p>
-                        </div>
-                    </div>
-                </li>
-                <li style="height: 199px; display: block; float: left; margin-right: 16px; margin-left: 6px;">
-                    <div class="box">
-                        <img src="assets/images/offer-img2.jpg" class="img-responsive">
-
-                        <div class="box-content">
-                            <h4>Shakti Sports</h4>
-
-                            <p>500 off on Purchase of 2000 &amp; above<br> Free T-shirt of your favorite team</p>
-
-                            <p class="pull-right"><a href="#"><img src="assets/images/share.png" class="img-responsive"></a>
-                            </p>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <span class="next"></span>
+<div class="col-lg-6 best-offers form-group">
+    <div class="wrapper">
+        <h1 class="pull-left">Best Offers on the block...!</h1>
+        <a href="#" class="pull-right form-group">View all offers</a>
     </div>
-    <!--liquid1-->
+    <div class="clear-both">
+        <carousel>
+            <slide ng-repeat="slides in offersSlides">
+                <div class="box" ng-repeat="offer in slides">
+                    <img ng-src="{{offer.imgUrl}}" class="img-responsive">
+
+                    <div class="box-content">
+                        <h4>{{offer.shop}}</h4>
+
+                        <p>{{offer.offers[0].title}}</p>
+
+                        <p>{{offer.offers[1].title}}</p>
+
+                        <p class="pull-right"><a href=""><img src="assets/images/share.png" class="img-responsive"></a>
+                        </p>
+                    </div>
+                </div>
+            </slide>
+        </carousel>
+    </div>
 </div>
