--- a/src/app/shared/header/header.tpl.html
+++ b/src/app/shared/header/header.tpl.html
@@ -1,4 +1,4 @@
-<header id="zingy-header" ng-controller="header.ctrl">
+<div id="zingy-header" ng-controller="header.ctrl">
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -8,6 +8,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <p class="desktop-logo"><img src="assets/images/logo.png" class="logo"/></p>
+
                 <p class="mobile-logo"><img src="assets/images/small_logo.png" class="logo"/></p>
 
                 <div class="bell"><a href="#"><img src="assets/images/bell.png" class="img-responsive"/></a></div>
@@ -21,4 +22,4 @@
             </div>
         </div>
     </div>
-</header>
+</div>
