--- a/src/app/shared/footer/footer.tpl.html
+++ b/src/app/shared/footer/footer.tpl.html
@@ -54,6 +54,18 @@
             </div>
         </div>
     </div>
-
+    <div class="panel-footer1 footer-links">
+        <div class="container">
+            <div class="row">
+                <ul class="links">
+                    <li><a href="#">Events registration?</a></li>
+                    <li><a href="#">Advertise with us</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </footer>
 <div class="f-like"><a href="#"><img src="assets/images/f-like.gif"/></a></div>
