Added Login functionality

--- a/src/app/account/login/account.login.tpl.html
+++ b/src/app/account/login/account.login.tpl.html
@@ -1,3 +1,46 @@
-<div class="well home">
-    {{title}}
+<div class="account-box">
+    <div class="jumbotron">
+        <h2 class="form-group">Sign In</h2>
+
+        <form role="form">
+            <div class="row">
+                <div class="form-group col-sm-12">
+                    <button class="btn btn-block btn-google-plus" ng-click="authenticate('google')">
+                        <span><i class="google"></i>Sign in with Google</span>
+                    </button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-sm-12">
+                    <button class="btn btn-block btn-facebook" ng-click="authenticate('facebook')">
+                        <span><i class="fb"></i> Sign in with Facebook</span>
+                    </button>
+                </div>
+            </div>
+            <p class="form-group">OR</p>
+
+            <div class="row">
+                <div class="form-group col-sm-12">
+                    <input type="email" class="form-control" placeholder="Email">
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-sm-12">
+                    <input type="password" class="form-control" placeholder="Passowrd">
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-sm-12">
+                    <button type="button" class="btn btn-block btn-primary">Login</button>
+                </div>
+            </div>
+            <p class="form-group">
+                <a href="#">Forgot your password?</a>
+            </p>
+
+            <p class="text-center text-muted">
+                <small>Don't have an account yet? <a href="/#/signup">Sign up</a></small>
+            </p>
+        </form>
+    </div>
 </div>
