--- a/src/app/shared/footer/footer.less
+++ b/src/app/shared/footer/footer.less
@@ -1,6 +1,58 @@
+.panel-footer {
+  padding: 10px 15px;
+  background-color: #797979;
+  color: #fff;
+  border-top: 1px solid #797979;
+}
+
+
 .panel-footer1 {
   padding: 10px 15px;
   background-color: #3f3f3f;
   color: #fff;
   text-align: center;
 }
+
+.footer-links ul {
+  margin: 0
+}
+
+.footer-links ul li {
+  display: inline
+}
+
+.footer-links li a {
+  color: #fff;
+  font-size: 13px;
+}
+
+.links > li + li:before {
+  color: #fff;
+  content: "|";
+  padding: 0 5px;
+}
+
+.border-btm {
+  border-bottom: 2px dotted #979797
+}
+
+.border-bottom {
+  border-bottom: 1px solid #a5a5a5
+}
+
+.number {
+  float: left;
+  margin-right: 35px;
+  font-size: 12px
+}
+
+.number.last {
+  margin-right: 0px
+}
+
+.number h2 {
+  color: #f0b343;
+  font-size: 32 p;
+  margin: 0
+}
+
