--- a/src/app/shared/footer/footer.tpl.html
+++ b/src/app/shared/footer/footer.tpl.html
@@ -54,18 +54,58 @@
             </div>
         </div>
     </div>
-    <div class="panel-footer1 footer-links">
+
+    <div class="panel-footer">
         <div class="container">
             <div class="row">
-                <ul class="links">
-                    <li><a href="#">Events registration?</a></li>
-                    <li><a href="#">Advertise with us</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Careers</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                </ul>
+                <div class="col-sm-10">
+                    <div class="number">
+                        <h2>2237</h2>
+
+                        <p>Registered<br>Facilities</p>
+                    </div>
+                    <div class="number">
+                        <h2>1127</h2>
+
+                        <p>Registered<br>Players</p>
+                    </div>
+                    <div class="number">
+                        <h2>664</h2>
+
+                        <p>Registered<br>Coaches</p>
+                    </div>
+                    <div class="number">
+                        <h2>1276</h2>
+
+                        <p>Registered<br>Suppliers</p>
+                    </div>
+                    <div class="number last">
+                        <h2>3325</h2>
+
+                        <p>Registered<br>Sports enthusiasts</p>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <p><a href="#"><img src="assets/images/social-network.png"></a></p>
+
+                    <p><a href="#"><img src="assets/images/google-play.gif"></a></p>
+
+                    <p><a href="#"><img src="assets/images/app-store.gif"></a></p>
+                </div>
             </div>
         </div>
     </div>
+
+    <div class="panel-footer1 footer-links">
+        <div class="container">
+            <ul class="links">
+                <li><a href="#">Events registration?</a></li>
+                <li><a href="#">Advertise with us</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Terms of Use</a></li>
+            </ul>
+        </div>
+    </div>
 </footer>
-<div class="f-like"><a href="#"><img src="assets/images/f-like.gif"/></a></div>
