--- a/src/app/results/results.tpl.html
+++ b/src/app/results/results.tpl.html
@@ -14,7 +14,7 @@
 
             </div>
             <div class="col-sm-7 col-lg-7">
-                <ng-include src="'app/results/results.content.tpl.html'"></ng-include>
+                <ng-include src="resultsTemplate"></ng-include>
             </div>
             <div class="col-sm-2 col-lg-2 form-group snowlink">
                 <img src="assets/images/snowlink.jpg" class="img-responsive"/>
