added supplier and coach details

--- a/src/app/supplier/suppliers.content.tpl.html
+++ b/src/app/supplier/suppliers.content.tpl.html
@@ -2,7 +2,7 @@
     <li ng-repeat="supplier in suppliers" class="form-group result">
 
         <div class="col-sm-9 border-right-dotted">
-            <h3>{{supplier.storeName}}</h3>
+            <h3>{{supplier.title}}</h3>
 
             <p><span class="city">{{supplier.storeLocation}} > </span>{{supplier.storeAddress}}</p>
 
